--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - 3333:3333
       - 9229:9229 
     volumes: 
-      - .:/usr/app
+      - .:/user/app
     links: 
       - database_ignite
     depends_on:
